# EpiClass

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  helios_pip_list.txt  helios_requirements.txt  pyproject.toml  requirements.txt
src/python/: compute_shaps.py  epiatlas_training.py  epiatlas_training_no_valid.py  main.py  other_estimators.py  predict.py  pyproject.toml  run_compute_shaps.sh  setup.py
src/python/argparseutils/: directorychecker.py
src/python/core/: _visualization.py  analysis.py  confusion_matrix.py  data.py  epiatlas_treatment.py  estimators.py  hdf5_loader.py  lgbm.py  metadata.py  model_pytorch.py  trainer.py  types.py
src/python/epi_ml/: compute_shaps.py  epiatlas_training.py  epiatlas_training_no_valid.py  main.py  other_estimators.py  predict.py  prep_shap_run.py
src/python/epi_ml/core/: __init__.py  analysis.py  confusion_matrix.py  data.py  data_source.py  epiatlas_treatment.py  estimators.py  hdf5_loader.py  lgbm.py  metadata.py  model_pytorch.py  shap_values.py
src/python/epi_ml/utils/: analyze_hdf5_vals.ipynb  analyze_hdf5_vals.py  analyze_metadata.ipynb  analyze_metadata.py  analyze_shaps.ipynb  analyze_weights.ipynb  augment_predict_file.py  bed_utils.py  benchmark_shap.py  bigwig_metrics.py  check_dir.py  chrY_bigwig_coverage.py  chrY_bigwig_coverage_requirements.list  chrY_bigwig_mean.py  classification_merging_utils.py  clean_hdf5.ipynb  clean_hdf5.py  collect_hdf5_vals.py  compute_bin_metrics.py  compute_bin_variance.py  compute_pca.py  compute_umap.py  create_confusion_matrices.py  epirr_corr.py  extract_metrics.py  general_utility.py  hdf5_to_float32.py  input_umap.py  merge_dfreeze_results.ipynb  merge_validation_predictions.py  metadata_utils.py  modify_metadata.py  my_logging.py  plot_results.ipynb  preconditions.py  shap_utils.py  ssh_utils.py  time.py  umap.py  unmix_runs.ipynb  (+2 more)
src/python/epiclass/: compute_shaps.py  epiatlas_training.py  epiatlas_training_no_valid.py  other_estimators.py  predict.py
src/python/epiclass/argparseutils/: directorychecker.py
src/python/epiclass/core/: __init__.py  analysis.py  confusion_matrix.py  data_source.py  epiatlas_treatment.py  estimators.py  lgbm.py  metadata.py  shap_values.py  trainer.py  types.py
src/python/epiclass/utils/: analyze_hdf5_vals.py  analyze_metadata.py  augment_predict_file.py  bed_utils.py  bg_val_transfer.py  bigwig_metrics.py  check_dir.py  chrY_bigwig_mean.py  clean_hdf5.py  collect_hdf5_vals.py  compute_bin_metrics.py  compute_pca.py  compute_umap.py  create_confusion_matrices.py  epirr_corr.py  extract_output_info.py  hdf5_to_float32.py  merge_all_predictions.py  merge_validation_predictions.py  metadata_utils.py  modify_metadata.py  my_logging.py  preconditions.py  ssh_utils.py  winsorize_hdf5.py
src/python/requirements/: full_requirements_py3.8.list  req_core.in  req_core_3.10.txt  req_core_3.11.txt  req_core_3.8.txt  req_core_3.9.txt
src/python/requirements/2022-06-14_c772b29/: pipdeptree_pytorch.txt
src/python/requirements/2023-02_gd745067/: requirements_narval_freeze.list
src/python/requirements/2023-05_g8f64cca/: minimal_requirements.txt
src/python/requirements/2025-07_a57157/: full_requirements.list
src/python/requirements/utility_script_specific_py3.8/: collect_hdf5_vals_requirements.list
src/python/tests/: conftest.py  epilap_test_data.py  import_test.py  justfile  other_estimators_test.py
src/python/tests/core/: analysis_test.py  confusion_matrix_test.py  data_test.py  epiatlas_treatment_test.py  epilap_test_data.py  hdf5_loader_test.py  lgbm_test.py  metadata_test.py  shap_test.py  test-epilap-empty-biotype-n40-metadata.json
src/python/tests/mains/: conftest.py  (+5 more)
src/python/utils/: analyze_metadata.py  analyze_shaps.ipynb  augment_predict_file.py  check_dir.py  compute_bin_variance.py  merge_all_predictions.py  modify_metadata.py  my_logging.py  preconditions.py  write_chrom_filter.py
(+470 files in other folders)
